logs/django-testdriver.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/django_testdriver'...
Listing './lib/python3.5/site-packages/django_testdriver/example'...
Listing './lib/python3.5/site-packages/django_testdriver/example/js'...
Listing './lib/python3.5/site-packages/django_testdriver/example/js/libs'...
Listing './lib/python3.5/site-packages/django_testdriver/example/js/tests'...
Listing './lib/python3.5/site-packages/django_testdriver/example/js/tests/fixtures'...
Listing './lib/python3.5/site-packages/django_testdriver/example/js/tests/output'...
Listing './lib/python3.5/site-packages/django_testdriver/example/js/tests/plugins'...
Listing './lib/python3.5/site-packages/django_testdriver/management'...
Listing './lib/python3.5/site-packages/django_testdriver/management/commands'...
Listing './lib/python3.5/site-packages/django_testdriver/static'...
Listing './lib/python3.5/site-packages/django_testdriver/static/css'...
Listing './lib/python3.5/site-packages/django_testdriver/templates'...
Listing './lib/python3.5/site-packages/django_testdriver/templates/django_testdriver'...
Listing './lib/python3.5/site-packages/django_testdriver/tests'...
Compiling './lib/python3.5/site-packages/django_testdriver/utils.py'...
***   File "./lib/python3.5/site-packages/django_testdriver/utils.py", line 80
    print "Server already running at http://localhost:%s" % options.get('port')
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_testdriver-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
